5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1582_1560.log
== TEST (2019-04-05 14:14:40) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:14:54) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- EXECUTION TIME:
0.165874
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:15:57) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra." .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:16:25) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra." .lower())
-- EXECUTION TIME:
0.13842
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:16:52) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra." .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:30:39) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:31:30) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:32:44) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- EXECUTION TIME:
0.147439
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:33:23) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string".lower())
-- OUTPUT:
string
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:33:47) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string"
-- EXECUTION TIME:
0.122192
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:36:44) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterrs.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterrs.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:46:25) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:47:27) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.243759
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:47:55) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string.".lower())
-- EXECUTION TIME:
0.144394
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
string.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:47:59) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string.".lower())
-- OUTPUT:
string.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:48:11) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string.".lower())
-- EXECUTION TIME:
0.216866
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
string.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:48:15) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string.".lower())
-- EXECUTION TIME:
0.202466
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
string.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:48:20) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string.".lower())
-- EXECUTION TIME:
0.147761
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
string.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:48:25) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("string".lower())
-- OUTPUT:
string
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 15:04:43) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 15:05:27) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:42:47) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:22:04) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:22:57) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:35:21) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:35:53) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- EXECUTION TIME:
0.158437
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:37:08) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print('Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.'.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:37:17) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print('Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.'.lower())
-- EXECUTION TIME:
0.127779
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:38:28) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:38:53) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.127604
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 21:27:52) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 21:30:20) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 21:31:16) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.130427
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 21:39:06) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7fdfd42708a0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 21:39:39) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7fa2331ab8a0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 21:40:07) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower)
-- EXECUTION TIME:
0.172023
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
<built-in method lower of str object at 0x7ffb8d56a300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:19:59) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.13872
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:20:01) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:22:13) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.171372
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:25:05) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:25:45) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string .lower())
-- EXECUTION TIME:
0.191004
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:28:01) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:28:06) 
-- CODE:
string ="Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(.lower())
-- EXECUTION TIME:
0.159954
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:24:07) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(.lower())
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:26:54) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:27:11) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string.lower())
-- EXECUTION TIME:
0.126474
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:28:12) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 15:28:43) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string.lower())
-- EXECUTION TIME:
0.214097
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:30:35) 
-- CODE:
string =("AUGUSTA ADA BYRON,A CONDESSA DE LOVELACE,NASCEU EM 1815,NA INGLATERRA.")
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:01:38) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na INGLATERRA.")
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:01:43) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na INGLATERRA.")
print(string.lower())
-- EXECUTION TIME:
0.188326
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:26) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:43) 
-- CODE:
string =("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- EXECUTION TIME:
0.136739
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:14:25) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra." .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:15:11) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra." .lower())
-- EXECUTION TIME:
0.223332
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:15:41) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:16:06) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- EXECUTION TIME:
0.178162
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:16:16) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- EXECUTION TIME:
0.112976
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:16:29) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:17:23) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:17:43) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,Inglaterra.".lower())
-- EXECUTION TIME:
0.204572
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:18:29) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:18:45) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- EXECUTION TIME:
0.183543
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:19:23) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string. .lower())
-- ERROR:
File "XXXX", line 2
    print(string. .lower())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:19:56) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 22:20:18) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- EXECUTION TIME:
0.172991
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:49:00) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 20:49:13) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- EXECUTION TIME:
0.234269
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:00:29) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:00:49) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print(string .lower())
-- EXECUTION TIME:
0.132607
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:04:26) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:04:36) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.")
print("Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra.".lower())
-- EXECUTION TIME:
0.170902
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:15:00) 
-- CODE:
string = ("Augusta Ada Byron,a Condessa de Lovelace, nasceu em 1815,na Inglaterra.")
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:15:34) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower()) 
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:15:43) 
-- CODE:
string = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower()) 
-- EXECUTION TIME:
0.210457
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
